<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Check List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_1">Map</string>
    <string name="content_description">Content Description</string>
    <string name="content_description_map_image">Click here to open Google map</string>
    <string name="content_description_share_image">Click here to share</string>
    <string name="title_activity_image_gallary">Image Gallary</string>
    <string name="content_description_imagegallery_image">Image</string>
    <string name="title_activity_map">Spot On Google Map</string>
    <string name="content_description_galleryitem">Gallery Item</string>
    <string name="title_activity_social_share">SocialShare</string>
    <string name="share_hint">Enter text here to share</string>
    <string name="share_button">Share</string>
    <string name="share_on_facebook">Share on facebook</string>
    <string name="share_text">Share Text</string>
    <string name="share_image">Share Image</string>
    <string name="title_activity_image_galler_tile_view">Image Gallery</string>
    <string name="title_activity_image_gallery_single_image">ImageGallery</string>
    <string name="content_description_single_image">Image Gallery</string>
    <string name="share_twitter">Share on twitter</string>
    <!-- <string name="btn_close">Close</string> -->
    <string name="btn_close">X</string>
    <string name="back">Back</string>
    <string name="title_activity_contact_list">Contacts</string>
    <string name="title_edit_activity_contact_list">Edit Contacts</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_single_contact">Single Contact</string>
    <string name="phone">Phone</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="title_activity_new_contact">NewContact</string>

</resources>
