<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.checklist.ContactList" >

    <item
        android:id="@+id/go_back"
        android:orderInCategory="3"
        android:title="@string/back"
        android:showAsAction="always" 
        android:icon="@drawable/go_back_icon"/>
    <item
        android:id="@+id/refresh_contactlist"
        android:orderInCategory="2"
        android:title="@string/refresh"
        android:showAsAction="always" 
        android:icon="@drawable/refresh_icon"/>   
    <item
        android:id="@+id/add_contact"
        android:icon="@drawable/add_icon"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/add"/>

</menu>
