<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.checklist.SocialShare" >

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/share_hint"
        android:imeOptions="actionSend"
        android:inputType="text" />

    <!-- <Button -->
    <!-- android:id="@+id/button3" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/button1" -->
    <!-- android:layout_centerVertical="true" -->
    <!-- android:layout_marginLeft="56dp" -->
    <!-- android:onClick="openFacebookShare" -->
    <!-- android:text="Button" /> -->

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="openTwitterShare"
        android:text="@string/share_twitter" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:onClick="openFacebookShare"
        android:text="@string/share_on_facebook" />
    
    <android.support.v4.view.ViewPager
        android:id="@+id/pager_at_social_share"
        android:layout_above="@id/button3"
        android:layout_below="@id/search"
        android:layout_width="fill_parent"
        android:contentDescription="@string/content_description_galleryitem"
        android:layout_height="fill_parent" />


</RelativeLayout>