<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.contacts.common_contacts.SingleContact" >
    
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/content_description"
        android:onClick="startImagePicker"
        android:scaleType="fitXY"
        android:src="@drawable/sample_profile_pic" />

    <CheckBox
        android:id="@+id/cbox_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignRight="@+id/name_str"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/red_border"
        android:focusableInTouchMode="false"
        android:onClick="onToggleClicked" />

    <TextView
        android:id="@+id/name_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_at_single_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_str"
        android:layout_below="@+id/name_str"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="textCapWords"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/menu_item_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phone_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name_at_single_contact"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:text="@string/phone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/phone_at_single_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phone_str"
        android:layout_below="@+id/phone_str"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="phone"
        android:background="@color/background"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/menu_item_background"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_alignLeft="@+id/name_at_single_contact"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete_contact_btn"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteContact" />

        <Button
            android:id="@+id/save_contact_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveContact"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>